feat: add 2fa with qrcode in users

--- a/app/views/users/enable_otp_show_qr.html.erb
+++ b/app/views/users/enable_otp_show_qr.html.erb
@@ -1,9 +1,11 @@
 <h2>Scan the QR Code to Enable Two Factor Authentication</h2>
 <div>
-  <%= raw RQRCode::QRCode.new(current_user.otp_provisioning_uri(current_user.email, issuer: "Devise-Two-Factor-Demo"),
-                              :svg,
-                              :level => :l,
-                              :unit => 2).as_svg %>
+  <%=
+    raw ::RQRCode::QRCode.new(
+      current_user.otp_provisioning_uri(current_user.email, issuer: "Devise-Two-Factor-Demo"),
+      :svg, :level => :l, :unit => 2
+    ).as_svg
+  %>
 </div>
 <%= form_tag(enable_otp_verify_path, method: :post) do %>
   <div>
