--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,6 +12,19 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
+  <!-- Disable 2FA with OTP -->
+  <% if resource.otp_required_for_login %>
+    <div class="field" style="margin: 1em">
+      <i>Enter OTP to disable Two Factor Authentication</i><br />
+      <%= f.text_field :otp_attempt %>
+    </div>
+  <% else %>
+    <div class="field" style="margin: 1em">
+      <i>Enable OTP?</i><br />
+      <%= link_to "Enable 2FA", enable_otp_show_qr_path %>
+    </div>
+  <% end %>
+
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
