--- a/packages/blog/app/views/blog/posts/index.html.erb
+++ b/packages/blog/app/views/blog/posts/index.html.erb
@@ -4,7 +4,7 @@
 
 <div id="posts">
   <% @posts.each do |post| %>
-    <%= render 'posts/indexed_post', post: post %>
+    <%= render 'blog/posts/indexed_post', post: post %>
   <% end %>
 </div>
 
