feat: create versions controller from posts

--- a/packages/blog/app/views/blog/posts/dup_turbo_stream.erb
+++ b/packages/blog/app/views/blog/posts/dup_turbo_stream.erb
@@ -1,5 +1,6 @@
 <%= turbo_stream.append(
       'posts',
       partial: 'posts/indexed_post',
-      locals: { post: @new_post })
+      locals: { post: @new_post }
+    )
 %>
