--- a/packages/blog/app/views/blog/posts/_links.html.erb
+++ b/packages/blog/app/views/blog/posts/_links.html.erb
@@ -2,4 +2,5 @@
 <%= link_to "Duplicate", dup_post_path(post), data: { turbo_method: :post } %> |
 <%= link_to "Copy", new_from_copy_post_path(post) %> |
 <%= link_to "Edit", edit_post_path(post) %> |
+<%= link_to "Versions", post_versions_path(post) %> |
 <%= link_to "Delete", post, method: :delete, data: { turbo_method: :delete } %>
