feat: move devise authentication to auth domain

--- a/packages/auth/app/views/auth/users/enable_otp_show_qr.html.erb
+++ b/packages/auth/app/views/auth/users/enable_otp_show_qr.html.erb
@@ -14,4 +14,4 @@
   </div>
   <%= submit_tag "Verify and Enable" %>
 <% end %>
-<%= link_to "Back", edit_user_registration_path %>
+<%= link_to "Back", auth.edit_user_registration_path %>
