--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,10 +2,10 @@
 <p>Find me in app/views/pages/home.html.erb</p>
 <% if user_signed_in? %>
   <p>Logged in as <strong><%= current_user.email %></strong>.</p>
-  <p><%= link_to 'Edit registration', edit_user_registration_path %></p>
-  <p><%= link_to 'Logout', destroy_user_session_path, method: :delete, data:{turbo_method: :delete} %></p>
+  <p><%= link_to 'Edit registration', auth.edit_user_registration_path %></p>
+  <p><%= link_to 'Logout', auth.destroy_user_session_path, method: :delete, data:{ turbo_method: :delete } %></p>
 <% else %>
   <p>Not logged in.</p>
-  <p><%= link_to 'Sign up', new_user_registration_path %></p>
-  <p><%= link_to 'Login', new_user_session_path %></p>
+  <p><%= link_to 'Sign up', auth.new_user_registration_path %></p>
+  <p><%= link_to 'Login', auth.new_user_session_path %></p>
 <% end %>
